fixed an issue with div overflow

--- a/src/main.css
+++ b/src/main.css
@@ -435,6 +435,7 @@ html {
   width: 100%;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
